--- a/application/index/view/account/forgot.html
+++ b/application/index/view/account/forgot.html
@@ -15,7 +15,7 @@
 					<input type="tel" maxlength="11" name="username" class="form-control" placeholder="输入您的手机号码" />
 				</div>
 				<div class="input-group">
-	            	<input type="text" class="form-control" maxlength="3" name="captcha" placeholder="数字验证码" />
+	            	<input type="text" class="form-control" maxlength="4" name="captcha" placeholder="验证码" />
 	            	<span class="input-group-append" id="basic-addon2">
 	                	<span class="input-group-text captcha-touch">
 	                		<img src="{:url('service/captcha')}" class="captcha" />
