--- a/application/index/view/account/reset.html
+++ b/application/index/view/account/reset.html
@@ -32,9 +32,9 @@
                     <input type="password" maxlength="32" name="confirm" class="form-control" placeholder="再输入一次登录密码" />
                 </div>
                 <div class="form-group">
-                    <label class="form-label">数字验证码</label>
+                    <label class="form-label">验证码</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" maxlength="3" name="captcha" placeholder="数字验证码" />
+                        <input type="text" class="form-control" maxlength="4" name="captcha" placeholder="验证码" />
                         <span class="input-group-append" id="basic-addon2">
                             <span class="input-group-text captcha-touch">
                                 <img src="{:url('service/captcha')}" class="captcha" />
